Market v1.3 fixes & changes